# engine2D

./: .gitignore  README.md
game2D/: CMakeLists.txt
game2D/engine2D/: CMakeLists.txt  Doxyfile
game2D/engine2D/doc/html/: annotated.html  classcore_1_1engine-members.html  classcore_1_1engine.html  classcore_1_1igame-members.html  classcore_1_1igame.html  classes.html  classinput_1_1input__manager-members.html  classinput_1_1input__manager.html  classrender_1_1index__buffer-members.html  classrender_1_1index__buffer.html  classrender_1_1renderer-members.html  classrender_1_1renderer.html  classrender_1_1shader__program-members.html  classrender_1_1shader__program.html  classrender_1_1sprite2D-members.html  classrender_1_1sprite2D.html  classrender_1_1sprite__animator-members.html  classrender_1_1sprite__animator.html  classrender_1_1texture2D-members.html  classrender_1_1texture2D.html  classrender_1_1vertex__array-members.html  classrender_1_1vertex__array.html  classrender_1_1vertex__buffer-members.html  classrender_1_1vertex__buffer.html  classrender_1_1vertex__buffer__descriptor-members.html  classrender_1_1vertex__buffer__descriptor.html  classresources_1_1resource__manager-members.html  classresources_1_1resource__manager.html  classsound_1_1sound__buffer-members.html  classsound_1_1sound__buffer.html  classsound_1_1wav__sound-members.html  classsound_1_1wav__sound.html  dir_3d69f64eaf81436fe2b22361382717e5.html  dir_9f5c276ab9fb4f37ad248a8f0e5ee4a1.html  dir_ada157988d47c0ed8971be2c0e2fe61c.html  dir_b1edfc2c49307e65a973a203b2244023.html  dir_bf8b89aaa3772fd188f30945fd9f6e01.html  dir_d44c64559bbebec7f509842c48db8b23.html  engine_8h_source.html  files.html  (+39 more)
game2D/engine2D/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+14 more)
game2D/engine2D/doc/latex/: annotated.tex  classcore_1_1engine.tex  classcore_1_1igame.tex  classinput_1_1input__manager.tex  classrender_1_1index__buffer.tex  classrender_1_1renderer.tex  classrender_1_1shader__program.tex  classrender_1_1sprite2D.tex  classrender_1_1sprite__animator.tex  classrender_1_1texture2D.tex  classrender_1_1vertex__array.tex  classrender_1_1vertex__buffer.tex  classrender_1_1vertex__buffer__descriptor.tex  classresources_1_1resource__manager.tex  classsound_1_1sound__buffer.tex  classsound_1_1wav__sound.tex  refman.tex  structinput_1_1input__event.tex  structrender_1_1frame__descriptor.tex  structrender_1_1render__settings.tex  structrender_1_1sprite__animator_1_1frame.tex  structrender_1_1sprite__animator_1_1frame.tex.tmp  structrender_1_1sprite__animator_1_1frame__coll__graph.dot  structrender_1_1vertex__buffer__descriptor_1_1element__descriptor.tex  structsound_1_1wav__sound_1_1playback.tex  structsound_1_1wav__sound_1_1playback__coll__graph.dot  structstbi__io__callbacks.tex
game2D/engine2D/include/core/: engine.h  igame.h
game2D/engine2D/include/input/: input_manager.h
game2D/engine2D/include/private/core/: engine_impl.h
game2D/engine2D/include/private/render/: index_buffer.h  renderer.h  sprite2D_impl.h  sprogram_impl.h  vertex_array.h  vertex_buffer.h  vertex_buffer_descriptor.h
game2D/engine2D/include/private/system/: audio_impl.h  r_bind.h  window_impl.h
game2D/engine2D/include/public/core/: audio.h  engine.h  igame.h  window.h
game2D/engine2D/include/public/input/: input_event.h
game2D/engine2D/include/public/render/: frame_structures.h  shader_program.h  sprite2D.h  sprite_animator.h  texture2D.h
game2D/engine2D/include/public/sound/: sound_buffer.h  wav_sound.h
game2D/engine2D/include/render/: frame_structures.h  renderer.h  shader_program.h  sprite2D.h  texture2D.h  vertex_buffer_descriptor.h
game2D/engine2D/include/resources/: resource_manager.h
game2D/engine2D/include/sound/: sound_buffer.h  wav_sound.h
game2D/engine2D/src/core/: engine.cpp
game2D/engine2D/src/input/: input_manager.cpp
game2D/engine2D/src/private/render/: renderer.cpp  vertex_array.cpp  vertex_buffer.cpp
game2D/engine2D/src/private/system/: audio.cpp  window.cpp
game2D/engine2D/src/public/core/: engine.cpp
game2D/engine2D/src/public/input/: input_manager.cpp
game2D/engine2D/src/public/render/: shader_program.cpp  sprite2D.cpp  sprite_animator.cpp  texture2D.cpp
game2D/engine2D/src/public/resources/: resource_manager.cpp
game2D/engine2D/src/render/: index_buffer.cpp  shader_program.cpp  sprite2D.cpp  texture2D.cpp  vertex_buffer_descriptor.cpp
game2D/engine2D/src/resources/: resource_manager.cpp
game2D/engine2D/src/sound/: sound_buffer.cpp  wav_sound.cpp
game2D/game/: CMakeLists.txt
game2D/game/src/: main.cpp
game2D/res/shaders/: test_shader.frag  test_shader.vert
(+2 files in other folders)
